--- a/environment/Vagrantfile
+++ b/environment/Vagrantfile
@@ -9,7 +9,7 @@ Vagrant.configure("2") do |config|
     cfg.vm.provision :shell, path: "tools-install.sh"
     cfg.vm.network :private_network, ip: "192.168.33.11", gateway: "192.168.33.1", dns: "8.8.8.8"
     cfg.vm.provider "virtualbox" do |vb, override|
-      vb.gui = true
+      vb.gui = false
       vb.name = "tic4302-lab"
       vb.customize ["modifyvm", :id, "--memory", 4096]
       vb.customize ["modifyvm", :id, "--cpus", 2]
